// Copyright 2021 Harness Inc.
// 
// Licensed under the Apache License, Version 2.0
// http://www.apache.org/licenses/LICENSE-2.0

syntax = "proto3";

package io.harness.eventsframework.schemas.user;

option java_multiple_files = true;
option go_package = "953_events_api";

message UserDTO {
  string userId = 2;
  string name = 5;
  string email = 6;
  bool locked = 7;
}
